--- a/tagpuanApp/templates/tagpuanApp/home.html
+++ b/tagpuanApp/templates/tagpuanApp/home.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Home Page</title>
-    </head>
-    <body>
-        <h1>This is home page</h1>
-        <p>welcome to home page</p>
-    </body>
-</html>
+{% extends 'tagpuanApp/base_profile.html' %}
+
+{% block body %}
+	<div class="row">
+		<div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+            <h1>Profile page</h1>
+            <p>Welcome {{ username }}</p>
+    	</div>
+    </div>
+{% endblock %}
+
+
+
