--- a/tagpuanApp/templates/tagpuanApp/base_profile.html
+++ b/tagpuanApp/templates/tagpuanApp/base_profile.html
@@ -25,6 +25,11 @@
 	    	</ul>
 			<ul class="nav navbar-nav navbar-right">
 	      		<li>
+					<a href="{% url 'profile_page' %}"><span class="glyphicon glyphicon-user"></span> Profile</a>
+				</li>
+	    	</ul>
+			<ul class="nav navbar-nav navbar-right">
+	      		<li>
 					<a href="{% url 'addpost' %}"><span class="glyphicon glyphicon-plus"></span> Add post</a>
 				</li>
 	    	</ul>
