--- a/tagpuanApp/templates/tagpuanApp/home.html
+++ b/tagpuanApp/templates/tagpuanApp/home.html
@@ -3,7 +3,7 @@
 {% block body %}
 	<div class="row">
 		<div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-            <h1>Profile page</h1>
+            <h1>Posts page</h1>
             <p>Welcome {{ username }}</p>
     	</div>
     </div>
