--- a/tagpuanApp/templates/tagpuanApp/update_contact_info.html
+++ b/tagpuanApp/templates/tagpuanApp/update_contact_info.html
@@ -3,12 +3,12 @@
 {% block body %}
 	<div class="row">
 		<div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-			<form class="sign_up_form" method="post">
-    			<h2 class="sign_up_title">Login</h2>
+			<form class="update_contact_info_form" method="post">
+    			<h2>Update Contact Information</h2>
+				<br/>
 				{% csrf_token %}
 				{{ form.as_p }}
-				<button type="submit">Login</button>
-				<!--<input type="submit" value="Register">-->
+				<button type="submit">Update</button>
     		</form>
     	</div>
     </div>
