--- a/tagpuanApp/templates/tagpuanApp/deletepost.html
+++ b/tagpuanApp/templates/tagpuanApp/deletepost.html
@@ -4,20 +4,15 @@
 	<div class="row">
 		<div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
 			<form class="sign_up_form" id="post_type" method="post" enctype="multipart/form-data">
-    			<h2 class="sign_up_title">Add Post</h2>
-				{% csrf_token %}
-				{{ form.as_p }}
-				<button type="submit">Add</button>
+    			
+				<button type="submit">Delete</button>
 				<!--<input type="submit" value="Register">-->
-
     		</form>
+				
+				<!--<input type="submit" value="Register">-->
+    		
             <h1></h1>
-
-			
             <!--<p>Welcome {{ username }}</p>-->
     	</div>
     </div>
 {% endblock %}
-
-
-
