--- a/tagpuanApp/templates/tagpuanApp/foundpost.html
+++ b/tagpuanApp/templates/tagpuanApp/foundpost.html
@@ -4,19 +4,23 @@
 		{% block body %}
 			<div class="row">
 					<div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+						<center><h1>Found</h1></center><br/>
 						<ul>
-							{% for Post in posts %}	
-								<li> 
-								<a href="{% url 'updatepost' pk=Post.post_id %}" method="post">{{Post.title}}</a>
-								</li>
+							{% for Post in posts %}
+								<hr>
+							<center><h3><a href="{% url 'updatepost' pk=Post.post_id %}" method="post">{{Post.title}}</a></h3></center>
+								{% if Post.image %}
+								<center><img src={{Post.image.url}} alt="no image" width="40%" height="40%"></center>
+								{% endif %}
+								<br/>
 								<div>
 									{{Post.post}}
 								</div>
+								<br/>
 								<div>
-  									<a href="{% url 'post_profile_page' pk=Post.post_id %}" method="post">
-  									{{Post.user}}</a>
+									<p>Posted by: <a href="{% url 'post_profile_page' pk=Post.post_id %}" method="post">{{Post.user}}</a></p>
 								</div>
-								<img src={{Post.image.url}} alt="no image" width="25%" height="25%">
+
 					        {% endfor %}
 					    </ul>
 					 </div>
@@ -24,6 +28,8 @@
 			<form action="{% url 'founddelete' %}">
     				<button type="submit">Delete</button>
     		</form>
+			<br/>
+			<br/>
 		{% endblock %}
 	</div>
 
