--- a/tagpuanApp/templates/tagpuanApp/foundpost.html
+++ b/tagpuanApp/templates/tagpuanApp/foundpost.html
@@ -3,19 +3,18 @@
 <div class="container">
 		{% block body %}
 			<div class="row">
-					Sort by Tag:
-							<select>
-							<option value="Tag" selected>Tag</option>
-							{% for Tag in tags %}
-									<option value={{Tag.tag}}>{{Tag.tag}}</option>
-							{% endfor %}
-							</select>
 					<div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
 						<center><h1>Found</h1></center><br/>
 						<ul>
+							Filter by Tags:
+							{% for t in tags%}
+
+							<a href="{% url 'filterfoundpost' pk=t.tag_id %}" method="post">{{t.tag}}</a>
+							{% endfor %}
 							{% for Post in posts %}
 								<hr>
 							<center><h3><a href="{% url 'Postprofile' pk=Post.post_id %}" method="post">{{Post.title}}</a></h3></center>
+								
 								{% if Post.image %}
 								<center><img src={{Post.image.url}} alt="no image" width="40%" height="40%"></center>
 								{% endif %}
