--- a/tagpuanApp/templates/tagpuanApp/lostpost.html
+++ b/tagpuanApp/templates/tagpuanApp/lostpost.html
@@ -1,17 +1,19 @@
 {% extends 'tagpuanApp/base_profile.html' %}
+
 <div class="container">
 		{% block body %}
 			<div class="row">
+					<div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
 						<center><h1>Lost</h1></center><br/>
 						<ul>
 							Filter by Tags:
 							{% for t in tags%}
 							<a href="{% url 'filterlostpost' pk=t.tag_id %}" method="post">{{t.tag}}</a>
 							{% endfor %}
-
 							{% for Post in posts %}
 								<hr>
 								<center><h3><a href="{% url 'Postprofile' pk=Post.post_id %}" method="post">{{Post.title}}</a></h3></center>
+
 								{% if Post.image %}
 								<center><img src={{Post.image.url}} alt="no image" width="40%" height="40%"></center>
 								{% endif %}
@@ -23,7 +25,7 @@
 								<div>
 									<p>Posted by: <a href="{% url 'post_profile_page' pk=Post.post_id %}" method="post">{{Post.user}}</a></p>
 								</div>
-								
+
 					        {% endfor %}
 					    </ul>
 					 </div>
