--- a/tagpuanApp/templates/tagpuanApp/register.html
+++ b/tagpuanApp/templates/tagpuanApp/register.html
@@ -3,24 +3,8 @@
 {% block body %}
 	<div class="row">
 		<div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-			<form class="sign_up_form" method="post">
+			<form class="sign_up_form" id="post_type" method="post">
     			<h2 class="sign_up_title">Register</h2>
-    			<!--<div class="form-group">-->
-    				<!--<input type="email" name="email" id="email" class="form-control input-lg" placeholder="Email address" tabindex="4">-->
-    			<!--</div>-->
-    			<!--<div class="form-group">-->
-    				<!--<input type="password" name="password" id="password" class="form-control input-lg" placeholder="Enter your password" tabindex="5">-->
-    			<!--</div>-->
-    			<!--<div class="row">-->
-    				<!--<div class="col-xs-12 col-md-12"><a href="#" class="btn btn-success btn-block btn-lg">Sign In</a></div>-->
-    			<!--</div>-->
-    			<!--<div class="buttons_divider">-->
-    			<!--</div>-->
-				<!--<div class="row terms_and_conditions">-->
-                    <!--<label>-->
-                      <!--<a href="#" data-toggle="modal" data-target="#t_and_c_m">Already have an account?</a>-->
-                    <!--</label>-->
-    			<!--</div>-->
 				{% csrf_token %}
 				{{ form.as_p }}
 				<button type="submit">Submit</button>
